--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ipdb = "*"
+alembic = "1.8.1"
+importlib-metadata = "6.0.0"
+importlib-resources = "5.10.0"
+ipdb = "0.13.9"
+sqlalchemy = "1.4.42"
 
 [dev-packages]
 
